--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,7 +1,7 @@
 #footer {
   background: var(--header-background-color);
   padding: 15px 3rem;
-  position: fixed;
+  position: relative;
   z-index: 1;
   left: 0;
   bottom: 0;
