--- a/styles/header.css
+++ b/styles/header.css
@@ -77,6 +77,10 @@
     &#userinfo_stats {
       float: left;
       border-left: 0;
+
+      .stat {
+        padding-right: 0.5em;
+      }
     }
   }
 
