--- a/styles/content.css
+++ b/styles/content.css
@@ -164,6 +164,78 @@
       margin-top: 10px;
     }
   }
+
+  a.permission_1,.permission_1 {
+    color: #F00;
+  }
+
+  a.permission_2,.permission_2 {
+    color: #010101;
+  }
+
+  a.permission_3,.permission_3 {
+    color: #3E3E84;
+  }
+
+  a.permission_4,.permission_4 {
+    color: #4DD0FF;
+  }
+
+  a.permission_5,.permission_5 {
+    color: #36C;
+  }
+
+  a.permission_6,.permission_6 {
+    color: #DFB301;
+  }
+
+  a.permission_7,.permission_7 {
+    color: #FF6;
+  }
+
+  a.permission_8,.permission_8 {
+    color: #FE9A2E;
+  }
+
+  a.permission_9,.permission_9 {
+    color: #9FF;
+  }
+
+  a.permission_10,.permission_10 {
+    color: #FF6;
+  }
+
+  a.permission_11,.permission_11 {
+    color: #0125DE;
+  }
+
+  a.permission_12,.permission_12 {
+    color: #C00;
+  }
+
+  a.permission_13,.permission_13 {
+    color: #966;
+  }
+
+  a.permission_14,.permission_14 {
+    color: #F78181;
+  }
+
+  a.permission_15,.permission_15 {
+    color: #CD0174;
+  }
+
+  a.permission_20,.permission_20 {
+    color: #11D587;
+  }
+
+  a.permission_21,.permission_21 {
+    color: #AEB404;
+  }
+
+  a.permission_22,.permission_22 {
+    color: #909;
+  }
 }
 
 #forums .linkbox {
